--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-<html></html>
+<html>
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+    crossorigin="anonymous"
+  />
+  <link href="index.css" rel="stylesheet" />
+  <head>
+    <title>robinsun</title>
+  </head>
+
+  <body>
+    <div class="container fuild bg-light w-50 p-4">
+      <form
+        class="d-flex flex-column p-4 bg-white align-items-center"
+        id="myform"
+        method="get"
+      >
+        <h1>GITHUB FORM (robinsun)</h1>
+
+        <div class="p-4">
+          <label for="">Username: </label>
+          <input class="textfield" type="text" name="username" id="username" />
+        </div>
+        <input type="submit" class="btn btn-primary" name="" id="" />
+      </form>
+      <div id="result-div">
+        <h3 id="result-head"></h3>
+        <ul id="result"></ul>
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
+</html>
