--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     <title>robinsun</title>
   </head>
 
-  <body>
+  <body class="bg-dark">
+    <nav class="navbar bg-transparent p-4 mb-4">
+      <ul class="w-50 mb-2 d-flex justify-content-between">
+        <li class="nav-item text-white">Home</li>
+        <li class="nav-item text-white">About</li>
+        <li class="nav-item text-white">Team</li>
+      </ul>
+    </nav>
+
     <div class="container fuild bg-light w-50 p-4">
       <form
         class="d-flex flex-column p-4 bg-white align-items-center"
